; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/solaris/remote/extr_19669.c_xdr_nm_send.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/solaris/remote/extr_19669.c_xdr_nm_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nm_send = type { i32, i32, i32, i32, i32 }

@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xdr_nm_send(i32* %0, %struct.nm_send* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.nm_send*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.nm_send* %1, %struct.nm_send** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = load %struct.nm_send*, %struct.nm_send** %5, align 8
  %8 = getelementptr inbounds %struct.nm_send, %struct.nm_send* %7, i32 0, i32 4
  %9 = call i32 @xdr_nm_send_header(i32* %6, i32* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %13, label %11

11:                                               ; preds = %2
  %12 = load i32, i32* @FALSE, align 4
  store i32 %12, i32* %3, align 4
  br label %47

13:                                               ; preds = %2
  %14 = load i32*, i32** %4, align 8
  %15 = load %struct.nm_send*, %struct.nm_send** %5, align 8
  %16 = getelementptr inbounds %struct.nm_send, %struct.nm_send* %15, i32 0, i32 3
  %17 = call i32 @xdr_nm_send_arg_int(i32* %14, i32* %16)
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %21, label %19

19:                                               ; preds = %13
  %20 = load i32, i32* @FALSE, align 4
  store i32 %20, i32* %3, align 4
  br label %47

21:                                               ; preds = %13
  %22 = load i32*, i32** %4, align 8
  %23 = load %struct.nm_send*, %struct.nm_send** %5, align 8
  %24 = getelementptr inbounds %struct.nm_send, %struct.nm_send* %23, i32 0, i32 2
  %25 = call i32 @xdr_nm_send_arg_string(i32* %22, i32* %24)
  %26 = icmp ne i32 %25, 0
  br i1 %26, label %29, label %27

27:                                               ; preds = %21
  %28 = load i32, i32* @FALSE, align 4
  store i32 %28, i32* %3, align 4
  br label %47

29:                                               ; preds = %21
  %30 = load i32*, i32** %4, align 8
  %31 = load %struct.nm_send*, %struct.nm_send** %5, align 8
  %32 = getelementptr inbounds %struct.nm_send, %struct.nm_send* %31, i32 0, i32 1
  %33 = call i32 @xdr_nm_send_arg_int(i32* %30, i32* %32)
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %37, label %35

35:                                               ; preds = %29
  %36 = load i32, i32* @FALSE, align 4
  store i32 %36, i32* %3, align 4
  br label %47

37:                                               ; preds = %29
  %38 = load i32*, i32** %4, align 8
  %39 = load %struct.nm_send*, %struct.nm_send** %5, align 8
  %40 = getelementptr inbounds %struct.nm_send, %struct.nm_send* %39, i32 0, i32 0
  %41 = call i32 @xdr_nm_send_footer(i32* %38, i32* %40)
  %42 = icmp ne i32 %41, 0
  br i1 %42, label %45, label %43

43:                                               ; preds = %37
  %44 = load i32, i32* @FALSE, align 4
  store i32 %44, i32* %3, align 4
  br label %47

45:                                               ; preds = %37
  %46 = load i32, i32* @TRUE, align 4
  store i32 %46, i32* %3, align 4
  br label %47

47:                                               ; preds = %45, %43, %35, %27, %19, %11
  %48 = load i32, i32* %3, align 4
  ret i32 %48
}

declare dso_local i32 @xdr_nm_send_header(i32*, i32*) #1

declare dso_local i32 @xdr_nm_send_arg_int(i32*, i32*) #1

declare dso_local i32 @xdr_nm_send_arg_string(i32*, i32*) #1

declare dso_local i32 @xdr_nm_send_footer(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
